--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,37 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Launch and Debug Hosted Blazor WebAssembly App",
+      "type": "blazorwasm",
+      "request": "launch",
+      "hosted": true,
+      "program": "${workspaceFolder}/bin/Debug/<target-framework>/<project-name.dll>",
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "apache.camel",
+      "request": "attach",
+      "name": "Attach Camel Debugger"
+    },
+    {
+      "name": "C/C++ Runner: Debug Session",
+      "type": "cppdbg",
+      "request": "launch",
+      "args": [],
+      "stopAtEntry": false,
+      "externalConsole": false,
+      "cwd": "/workspaces/llama3/llama",
+      "program": "/workspaces/llama3/llama/build/Debug/outDebug",
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
         {
-            "type": "apache.camel",
-            "request": "attach",
-            "name": "Attach Camel Debugger"
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
         }
-    ]
+      ]
+    }
+  ]
 }
